--- a/.gitmodules
+++ b/.gitmodules
@@ -22,14 +22,6 @@
 	path = src/modules/micrortps_bridge/micro-CDR
 	url = git@github.com:sritank/Micro-CDR.git
 	branch = px4
-[submodule "platforms/nuttx/NuttX/nuttx"]
-	path = platforms/nuttx/NuttX/nuttx
-	url = git@github.com:sritank/NuttX.git
-	branch = px4_firmware_nuttx-8.2
-[submodule "platforms/nuttx/NuttX/apps"]
-	path = platforms/nuttx/NuttX/apps
-	url = git@github.com:sritank/NuttX-apps.git
-	branch = px4_firmware_nuttx-8.2
 [submodule "cmake/configs/uavcan_board_ident"]
 	path = cmake/configs/uavcan_board_ident
 	url = git@github.com:sritank/uavcan_board_ident.git
@@ -48,4 +40,12 @@
 [submodule "src/lib/matrix"]
 	path = src/lib/matrix
 	url = git@github.com:sritank/Matrix.git
+	branch = master
+[submodule "platforms/nuttx/NuttX/nuttx"]
+	path = platforms/nuttx/NuttX/nuttx
+	url = git@github.com:sritank/NuttX.git
+	branch = master
+[submodule "platforms/nuttx/NuttX/apps"]
+	path = platforms/nuttx/NuttX/apps
+	url = git@github.com:sritank/NuttX-apps.git
 	branch = master
