--- a/.gitmodules
+++ b/.gitmodules
@@ -1,51 +1,51 @@
 [submodule "mavlink/include/mavlink/v2.0"]
 	path = mavlink/include/mavlink/v2.0
-	url = https://github.com/mavlink/c_library_v2.git
+	url = git@github.com:sritank/c_library_v2.git
 	branch = master
 [submodule "src/drivers/uavcan/libuavcan"]
 	path = src/drivers/uavcan/libuavcan
-	url = https://github.com/PX4/uavcan.git
+	url = git@github.com:sritank/libuavcan.git
 	branch = px4
 [submodule "Tools/jMAVSim"]
 	path = Tools/jMAVSim
-	url = https://github.com/PX4/jMAVSim.git
+	url = git@github.com:sritank/jMAVSim.git
 	branch = master
 [submodule "Tools/sitl_gazebo"]
 	path = Tools/sitl_gazebo
-	url = https://github.com/sritank/sitl_gazebo.git
+	url = git@github.com:sritank/sitl_gazebo.git
 	branch = master
 [submodule "src/lib/matrix"]
 	path = src/lib/matrix
-	url = https://github.com/PX4/Matrix.git
+	url = git@github.com:sritank/Matrix.git
 	branch = master
 [submodule "src/lib/ecl"]
 	path = src/lib/ecl
-	url = https://github.com/PX4/ecl.git
+	url = git@github.com:sritank/ecl.git
 	branch = master
 [submodule "boards/atlflight/cmake_hexagon"]
 	path = boards/atlflight/cmake_hexagon
-	url = https://github.com/PX4/cmake_hexagon.git
+	url = git@github.com:sritank/cmake_hexagon.git
 	branch = px4
 [submodule "src/drivers/gps/devices"]
 	path = src/drivers/gps/devices
-	url = https://github.com/PX4/GpsDrivers.git
+	url = git@github.com:sritank/GpsDrivers.git
 	branch = master
 [submodule "src/modules/micrortps_bridge/micro-CDR"]
 	path = src/modules/micrortps_bridge/micro-CDR
-	url = https://github.com/PX4/micro-CDR.git
+	url = git@github.com:sritank/Micro-CDR.git
 	branch = px4
 [submodule "platforms/nuttx/NuttX/nuttx"]
 	path = platforms/nuttx/NuttX/nuttx
-	url = https://github.com/PX4/NuttX.git
+	url = git@github.com:sritank/NuttX.git
 	branch = px4_firmware_nuttx-8.2
 [submodule "platforms/nuttx/NuttX/apps"]
 	path = platforms/nuttx/NuttX/apps
-	url = https://github.com/PX4/NuttX-apps.git
+	url = git@github.com:sritank/NuttX-apps.git
 	branch = px4_firmware_nuttx-8.2
 [submodule "cmake/configs/uavcan_board_ident"]
 	path = cmake/configs/uavcan_board_ident
-	url = https://github.com/PX4/uavcan_board_ident.git
+	url = git@github.com:sritank/uavcan_board_ident.git
 	branch = master
 [submodule "platforms/qurt/dspal"]
 	path = platforms/qurt/dspal
-	url = https://github.com/ATLFlight/dspal.git
+	url = git@github.com:sritank/dspal.git
